--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	            <!--------------- About me ---------------------->
 	<section class="about-container" id="About">
 		<div class="about-content">
-				<img src="about-img.jpg">
+				<img src="About-img.jpg">
 			<div class="about">
 				<h1>About Me</h1>
 				<h2>Developer and Designer</h2>
